--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,12 +20,16 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 aes = "0.8"
 base64 = "0.21"
+block-modes = "0.9"
+hex = "0.4"
 rand = "0.8"
 once_cell = "1.19"
+rfd = "0.15"
+sha2 = "0.10"
 
